syntax = "proto3";
option go_package = "proto/queue/;queue";

import "google/protobuf/empty.proto";

message CreateRequest {
    string name = 1;
}

message DeleteRequest {
    string name = 1;
    string token = 2;
}

message ListResponse {
    repeated string queues = 1;
}

message ConnectRequest {
    string name = 1;
    string token = 2;
}

message PublishMessageRequest {
    string name = 1;
    string message = 2;
}

message ConsumeMessageRequest {
    string name = 1;
    string token = 2;
}

message ConsumeMessageResponse {
    string message = 1;
}

service QueueService {
	rpc Create(CreateRequest) returns (google.protobuf.Empty) {};
	rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {};
    rpc List(google.protobuf.Empty) returns (ListResponse) {};
    rpc Connect(ConnectRequest) returns (google.protobuf.Empty) {};
    rpc Disconnect(google.protobuf.Empty) returns (google.protobuf.Empty) {};

    rpc PublishMessage(PublishMessageRequest) returns (google.protobuf.Empty) {};
    rpc ConsumeMessage(ConsumeMessageRequest) returns (ConsumeMessageResponse) {};
}